--- a/templates/profile.html
+++ b/templates/profile.html
@@ -93,5 +93,42 @@
                 <p>No stories written.</p>
             {% endif %}
         </div>
+
+        <div id="Liked_Critters" class="tabcontent">
+            {% if liked_critters %}
+            <div class="critter-grid">
+                {% for critter in liked_critters %}
+                <div>
+                    <a href="{{ url_for('critter_page', cid=critter.cid) }}" class="critter-card">
+                        <img src="{{ url_for('uploaded_file', filename=critter.imagepath) }}"
+                            alt="{{ critter.name }}">
+                        <p>{{ critter.name }}</p>
+                    </a>
+                </div>
+                {% endfor %}
+            </div>
+            {% else %}
+                <p>No liked critters.</p>
+            {% endif %}
+        </div>
+
+        <div id="Liked_Stories" class="tabcontent">
+            {% if liked_stories %}
+                <section class="stories-section">
+                    <div class="story-group">
+                        <div class="story-card-grid">
+                            {% for story in liked_stories %}
+                                <a href="{{ url_for('story_page', sid=story.sid, cid=story.critter_info.cid) }}" class="story-card pastel-box story-card-link">
+                                    <span class="story-author-tag">For {{ story.critter_info.name }}</span>
+                                    <p>{{ story.critter_story }}</p>
+                                </a>
+                            {% endfor %}
+                        </div>
+                    </div>
+                </section>
+            {% else %}
+                <p>No stories liked yet.</p>
+            {% endif %}
+        </div>
     </div>
 {% endblock %}
