password formatting fixed

--- a/templates/settings.html
+++ b/templates/settings.html
@@ -44,11 +44,11 @@
         <h2>Update Password</h2>
         <p class="block-subtitle">Change your password here.</p>
         <form method="post" action="">
-            <p><label for="old_pw"><strong>Old Password:</strong></label></p><br>
+            <p><label for="old_pw"><strong>Old Password:</strong></label></p>
                 <input id="old_pw" type="password" name="old_pw"></p> 
-            <p><label for="new_pw1"><strong>New Password:</strong></label></p><br>
+            <p><label for="new_pw1"><strong>New Password:</strong></label></p>
                 <input id="new_pw1" type="password" name="new_pw1"></p>
-            <p><label for="new_pw2"><strong>Confirm new password:</strong></label></p><br>
+            <p><label for="new_pw2"><strong>Confirm new password:</strong></label></p>
                 <input id="new_pw2" type="password" name="new_pw2"></p>
             <p><input type="submit" name="action" value="Update Password"></p>
         </form>
