--- a/templates/profile.html
+++ b/templates/profile.html
@@ -56,16 +56,21 @@
                     </a>
 
                     <div class="like-btn-container">
-                        <button type="button" class="like-btn" data-cid="{{ critter.cid }}">
-                            <!-- Heart SVG -->
-                            <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                        <button value="like"
+                                type="button"
+                                class="like-btn"
+                                data-cid="{{ critter.cid }}"
+                                aria-label="Like this critter">
+                            <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
                                 <path d="M20.84 4.61a5.5 5.5 0 0 0-7.78 0L12 5.67l-1.06-1.06a5.5 5.5 0 0 0-7.78 7.78l1.06 1.06L12 21.23l7.78-7.78 1.06-1.06a5.5 5.5 0 0 0 0-7.78z"></path>
                             </svg>
                         </button>
+
                         <div class="like-count-display">
                             <span class="like-count">{{ critter.likes }}</span> 
                         </div>
                     </div>
+
                 </div>
                 {% endfor %}
             </div>
@@ -106,12 +111,16 @@
                     </a>
 
                     <div class="like-btn-container">
-                        <button type="button" class="like-btn" data-cid="{{ critter.cid }}">
-                            <!-- Heart SVG -->
-                            <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                        <button value="like"
+                                type="button"
+                                class="like-btn"
+                                data-cid="{{ critter.cid }}"
+                                aria-label="Like this critter">
+                            <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
                                 <path d="M20.84 4.61a5.5 5.5 0 0 0-7.78 0L12 5.67l-1.06-1.06a5.5 5.5 0 0 0-7.78 7.78l1.06 1.06L12 21.23l7.78-7.78 1.06-1.06a5.5 5.5 0 0 0 0-7.78z"></path>
                             </svg>
                         </button>
+
                         <div class="like-count-display">
                             <span class="like-count">{{ critter.likes }}</span> 
                         </div>
