--- a/templates/profile.html
+++ b/templates/profile.html
@@ -75,7 +75,7 @@
                 {% endfor %}
             </div>
             {% else %}
-                <p>No critters uploaded.</p>
+                <p class="empty-text">No critters uploaded.</p>
             {% endif %}
         </div>
 
@@ -95,7 +95,7 @@
                     </div>
                 </section>
             {% else %}
-                <p>No stories written.</p>
+                <p class="empty-text">No stories written.</p>
             {% endif %}
         </div>
 
@@ -129,7 +129,7 @@
                 {% endfor %}
             </div>
             {% else %}
-                <p>No critters liked yet.</p>
+                <p class="empty-text">No critters liked yet.</p>
             {% endif %}
         </div>
 
@@ -148,7 +148,7 @@
                     </div>
                 </section>
             {% else %}
-                <p>No stories liked yet.</p>
+                <p class="empty-text">No stories liked yet.</p>
             {% endif %}
         </div>
     </div>
