--- a/templates/create.html
+++ b/templates/create.html
@@ -3,8 +3,7 @@
 {% extends "base.html" %}   
 
 {% block head_stuff %}
-<title>"Create Page: Contains embedded website to draw your 
-    critter. Save the photo and use for upload critter."</title>
+<title>"Create Critter"</title>
 {% endblock %}
 
 {% block main_content %}   
