--- a/templates/delete_critter.html
+++ b/templates/delete_critter.html
@@ -1,16 +1,16 @@
 {% extends "base.html" %}
-{% block main_content %}
 
-<head>
-    <meta charset="utf-8">
-    <title>Delete Critter From Data Base</title>
-</head>
+{% block head_stuff %}
+<title>"Delete Critter"</title>
+{% endblock %}
+
+{% block main_content %}
 
 
 <div class="settings">
 
     <h1>Are you sure you want to delete {{ critter_info.name }}?</h1>
-    <p>This will also delete all stories written by you and other users about {{ critter_info.name }}</p>
+    <p>This will also delete all stories written by you and other users about {{ critter_info.name }}.</p>
 
     <!-- Critter Header Card -->
     <section class="critter-header-card">
@@ -28,6 +28,8 @@
             </p>
         </div>
     </section>
+
+    <p></p>
 
     <!-- Delete Form -->
     <form method="post" action="{{url_for('delete_critter', cid=critter_info.cid)}}">
