--- a/templates/edit_story.html
+++ b/templates/edit_story.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block head_stuff %}
-<title>"Edit Story: Edit a story you have written."</title>
+<title>"Edit Story"</title>
 {% endblock %}
 
 {% block main_content %}
