--- a/templates/old_main.html
+++ b/templates/old_main.html
@@ -4,8 +4,7 @@
 {% extends "base.html" %}
 
 {% block head_stuff %}
-<title>"Old Main Page: Displays links created during the draft 
-    phase"</title>
+<title>"Old Main Page"</title>
 {% endblock %}
 
 {% block main_content %}
