--- a/templates/user_lookup.html
+++ b/templates/user_lookup.html
@@ -3,8 +3,7 @@
 {% extends "base.html" %}   
 
 {% block head_stuff %}
-<title>"User Search Results: Contains the results from 
-    your search."</title>
+<title>"User Search"</title>
 {% endblock %}
 
 {% block main_content %}      
