--- a/templates/about.html
+++ b/templates/about.html
@@ -4,8 +4,7 @@
 {% extends "base.html" %}
 
 {% block head_stuff %}
-<title>"About Page: Contains a description of the website 
-    and the creators."</title>
+<title>"About Page"</title>
 {% endblock %}
 
 {% block main_content %}
