--- a/templates/critter_lookup.html
+++ b/templates/critter_lookup.html
@@ -3,8 +3,7 @@
 {% extends "base.html" %}  
 
 {% block head_stuff %}
-<title>"Critter Search Results: Contains the results from 
-    your search."</title>
+<title>"Critter Search"</title>
 {% endblock %}
 
 {% block main_content %}      
