--- a/templates/critter_upload.html
+++ b/templates/critter_upload.html
@@ -1,8 +1,7 @@
 {% extends "base.html" %}
 
 {% block head_stuff %}
-<title>"Critter Upload: Upload a photo, name it, and write a 
-    description for your critter."</title>
+<title>"Critter Upload"</title>
 {% endblock %}
 
 {% block main_content %}
