--- a/templates/delete_story.html
+++ b/templates/delete_story.html
@@ -1,4 +1,9 @@
 {% extends "base.html" %}
+
+{% block head_stuff %}
+<title>"Delete Story"</title>
+{% endblock %}
+
 {% block main_content %}
 
 <div class="settings">
