--- a/templates/main.html
+++ b/templates/main.html
@@ -4,8 +4,7 @@
 {% extends "base.html" %}
 
 {% block head_stuff %}
-<title>"Main Page: Displays all critter posts! Displays post 
-    from most to least recent."</title>
+<title>"CritterCave"</title>
 {% endblock %}
 
 {% block main_content %}
