--- a/templates/profile.html
+++ b/templates/profile.html
@@ -4,8 +4,7 @@
 {% extends "base.html" %}
 
 {% block head_stuff %}
-<title>"Profile Page: Displays a user's information and all 
-    the critters they created."</title>
+<title>"Profile"</title>
 {% endblock %}
 
 {% block main_content %}
