--- a/templates/story.html
+++ b/templates/story.html
@@ -1,8 +1,7 @@
 {% extends "base.html" %}
 
 {% block head_stuff %}
-<title>"Story Page: Displays a story and info about the critter it was written for, 
-    including it's photo, name and description."</title>
+<title>"Story Page"</title>
 {% endblock %}
 
 {% block main_content %}
