--- a/templates/story_upload.html
+++ b/templates/story_upload.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block head_stuff %}
-<title>"Story Upload: Upload your story for a critter."</title>
+<title>"Story Upload"</title>
 {% endblock %}
 
 {% block main_content %}
