Updated commenting for templates

--- a/templates/about.html
+++ b/templates/about.html
@@ -1,5 +1,5 @@
 <!-- (CritterCave) -->
-<!-- HTML template for about page -->
+<!-- About page containing information on CritterCave and the users -->
 
 {% extends "base.html" %}
 
