--- a/templates/create.html
+++ b/templates/create.html
@@ -1,5 +1,6 @@
 <!-- (CritterCave) -->
-<!-- HTML template for a critter lookup result page -->
+<!-- Contains embedded page to draw a pixel critter -->
+
 {% extends "base.html" %}   
 
 {% block head_stuff %}
