--- a/templates/critter.html
+++ b/templates/critter.html
@@ -1,3 +1,6 @@
+<!-- (CritterCave) -->
+<!-- Displays the critter's information and stories -->
+
 {% extends "base.html" %}
 
 {% block head_stuff %}
