--- a/templates/critter_lookup.html
+++ b/templates/critter_lookup.html
@@ -1,5 +1,6 @@
 <!-- (CritterCave) -->
-<!-- HTML template for a critter lookup result page -->
+<!-- Displays the results of a user's seach for a critter -->
+
 {% extends "base.html" %}  
 
 {% block head_stuff %}
