--- a/templates/critter_upload.html
+++ b/templates/critter_upload.html
@@ -1,3 +1,7 @@
+<!-- (CritterCave) -->
+<!-- Allows user to upload a critter, including the image, name, 
+    and description-->
+
 {% extends "base.html" %}
 
 {% block head_stuff %}
