--- a/templates/old_main.html
+++ b/templates/old_main.html
@@ -1,5 +1,6 @@
 <!-- (CritterCave) -->
-<!-- HTML template for the draft's main page -->
+<!-- Previous main page for our draft submission. 
+    Contains links to created pages. -->
 
 {% extends "base.html" %}
 
