--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,5 +1,6 @@
 <!-- (CritterCave) -->
-<!-- HTML template for a user's profile page -->
+<!-- Displays a user's profile page, including their critter,
+    stories, liked critters, and liked stories -->
 
 {% extends "base.html" %}
 
