--- a/templates/settings.html
+++ b/templates/settings.html
@@ -1,5 +1,5 @@
 <!-- (CritterCave) -->
-<!-- HTML template for the settings page -->
+<!-- Allows user to configure their profile -->
 
 {% extends "base.html" %}
 
