--- a/templates/delete_critter.html
+++ b/templates/delete_critter.html
@@ -1,3 +1,6 @@
+<!-- (CritterCave) -->
+<!-- Allows a user to delete their own critter -->
+
 {% extends "base.html" %}
 
 {% block head_stuff %}
@@ -29,7 +32,7 @@
         </div>
     </section>
 
-    <p></p>
+    <br>
 
     <!-- Delete Form -->
     <form method="post" action="{{url_for('delete_critter', cid=critter_info.cid)}}">
