--- a/templates/delete_story.html
+++ b/templates/delete_story.html
@@ -1,3 +1,6 @@
+<!-- (CritterCave) -->
+<!-- Allows a user to delete their own story for a critter -->
+
 {% extends "base.html" %}
 
 {% block head_stuff %}
@@ -10,14 +13,14 @@
     <h1>Are you sure you want to delete this story?</h1>
 
     <!-- LEFT: Critter Card -->
-        <div class="story-card">
-            <h1 class="story-title">A Tale of {{ critter_info.name }}</h1>
-            <div class="story-content">
-            <p>{{ story_info.story }}</p>
-            </div>
+    <div class="story-card">
+        <h1 class="story-title">A Tale of {{ critter_info.name }}</h1>
+        <div class="story-content">
+        <p>{{ story_info.story }}</p>
         </div>
+    </div>
 
-        <br>
+    <br>
 
     <!-- Delete Form -->
     <form method="post" action="{{url_for('delete_story', sid=story_info.sid)}}">
