--- a/templates/edit_story.html
+++ b/templates/edit_story.html
@@ -1,3 +1,6 @@
+<!-- (CritterCave) -->
+<!-- Allows a user to edit their own story for a critter -->
+
 {% extends "base.html" %}
 
 {% block head_stuff %}
