--- a/templates/signin.html
+++ b/templates/signin.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name=author content="">
     <title>"Sign-In Page for CritterCave"</title>
-    <link rel="icon" type="image/x-icon" href="/static/favi.png">
+    <link rel="icon" type="image/x-icon" href="{{url_for('static', filename = 'favi.png')}}">
     <link rel='stylesheet' href="{{url_for('static', filename = 'style.css')}}">
     <script src="{{ url_for('static', filename='script.js') }}"></script>
 
