Updating titles and removing unneeded html

--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,7 @@
     <script src="{{ url_for('static', filename='script.js') }}"></script>
 
     {% block head_stuff %}
-      <title>{{ page_title }}</title>
+      <title>Base HTML</title>
     {% endblock %}
 </head>
 
