--- a/templates/critter_lookup.html
+++ b/templates/critter_lookup.html
@@ -4,7 +4,7 @@
 {% extends "base.html" %}  
 
 {% block head_stuff %}
-<title>"Critter Search"</title>
+<title>Search Results</title>
 {% endblock %}
 
 {% block main_content %}      
