--- a/templates/critter_upload.html
+++ b/templates/critter_upload.html
@@ -5,7 +5,7 @@
 {% extends "base.html" %}
 
 {% block head_stuff %}
-<title>"Critter Upload"</title>
+<title>Critter Upload</title>
 {% endblock %}
 
 {% block main_content %}
