--- a/templates/delete_story.html
+++ b/templates/delete_story.html
@@ -4,7 +4,7 @@
 {% extends "base.html" %}
 
 {% block head_stuff %}
-<title>"Delete Story"</title>
+<title>Delete Story</title>
 {% endblock %}
 
 {% block main_content %}
