--- a/templates/about.html
+++ b/templates/about.html
@@ -4,7 +4,7 @@
 {% extends "base.html" %}
 
 {% block head_stuff %}
-<title>"About Page"</title>
+<title>About Page</title>
 {% endblock %}
 
 {% block main_content %}
