--- a/templates/create.html
+++ b/templates/create.html
@@ -4,7 +4,7 @@
 {% extends "base.html" %}   
 
 {% block head_stuff %}
-<title>"Create Critter"</title>
+<title>Create Critter</title>
 {% endblock %}
 
 {% block main_content %}   
