--- a/templates/critter.html
+++ b/templates/critter.html
@@ -4,7 +4,7 @@
 {% extends "base.html" %}
 
 {% block head_stuff %}
-<title>"Critter Page"</title>
+<title>Critter Page</title>
 {% endblock %}
 
 {% block main_content %}
