--- a/templates/delete_critter.html
+++ b/templates/delete_critter.html
@@ -4,7 +4,7 @@
 {% extends "base.html" %}
 
 {% block head_stuff %}
-<title>"Delete Critter"</title>
+<title>Delete Critter</title>
 {% endblock %}
 
 {% block main_content %}
