--- a/templates/edit_story.html
+++ b/templates/edit_story.html
@@ -4,7 +4,7 @@
 {% extends "base.html" %}
 
 {% block head_stuff %}
-<title>"Edit Story"</title>
+<title>Edit Story</title>
 {% endblock %}
 
 {% block main_content %}
