--- a/templates/profile.html
+++ b/templates/profile.html
@@ -5,7 +5,7 @@
 {% extends "base.html" %}
 
 {% block head_stuff %}
-<title>"Profile"</title>
+<title>Profile</title>
 {% endblock %}
 
 {% block main_content %}
