--- a/templates/settings.html
+++ b/templates/settings.html
@@ -4,7 +4,7 @@
 {% extends "base.html" %}
 
 {% block head_stuff %}
-<title>"Settings"</title>
+<title>Settings</title>
 {% endblock %}
 
 {% block main_content %}
