--- a/templates/story.html
+++ b/templates/story.html
@@ -4,7 +4,7 @@
 {% extends "base.html" %}
 
 {% block head_stuff %}
-<title>"Story Page"</title>
+<title>Story Page</title>
 {% endblock %}
 
 {% block main_content %}
