--- a/templates/story_upload.html
+++ b/templates/story_upload.html
@@ -4,7 +4,7 @@
 {% extends "base.html" %}
 
 {% block head_stuff %}
-<title>"Story Upload"</title>
+<title>Story Upload</title>
 {% endblock %}
 
 {% block main_content %}
