--- a/templates/user_lookup.html
+++ b/templates/user_lookup.html
@@ -4,7 +4,7 @@
 {% extends "base.html" %}   
 
 {% block head_stuff %}
-<title>"User Search"</title>
+<title>Search Results</title>
 {% endblock %}
 
 {% block main_content %}      
