--- a/templates/profile.html
+++ b/templates/profile.html
@@ -60,6 +60,7 @@
                                 type="button"
                                 class="like-btn"
                                 data-cid="{{ critter.cid }}"
+                                data-url="{{ url_for('like_feature', cid=critter.cid) }}"
                                 aria-label="Like this critter">
                             <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
                                 <path d="M20.84 4.61a5.5 5.5 0 0 0-7.78 0L12 5.67l-1.06-1.06a5.5 5.5 0 0 0-7.78 7.78l1.06 1.06L12 21.23l7.78-7.78 1.06-1.06a5.5 5.5 0 0 0 0-7.78z"></path>
@@ -115,6 +116,7 @@
                                 type="button"
                                 class="like-btn"
                                 data-cid="{{ critter.cid }}"
+                                data-url="{{ url_for('like_feature', cid=critter.cid) }}"
                                 aria-label="Like this critter">
                             <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
                                 <path d="M20.84 4.61a5.5 5.5 0 0 0-7.78 0L12 5.67l-1.06-1.06a5.5 5.5 0 0 0-7.78 7.78l1.06 1.06L12 21.23l7.78-7.78 1.06-1.06a5.5 5.5 0 0 0 0-7.78z"></path>
