--- a/templates/base.html
+++ b/templates/base.html
@@ -2,7 +2,8 @@
 <!-- Base template -->
 
 <!doctype html>
-<html lang='en' data-theme="light">
+<html lang="en" data-theme="{{ session.get('theme', 'light') }}">
+
 <head>
     <meta charset='utf-8'>
     <meta name="viewport" content="width=device-width, initial-scale=1">
