--- a/templates/critter.html
+++ b/templates/critter.html
@@ -60,11 +60,34 @@
             {% if stories %}
                 <div class="story-card-grid">
                     {% for story in stories %}
+                    <div>
                         {% if story.uid == user.uid %}
                         <a href="{{ url_for('story_page', sid=story.sid, cid=critter_info.cid) }}" class="story-card pastel-box story-card-link">
                             <p>{{ story.critter_story }}</p>
                         </a>
+
+                        <div class="like-btn-story">
+                            <button value="like"
+                                    type="button"
+                                    class="like-btn"
+                                    data-sid="{{ story.sid }}"
+                                    data-story="{{ url_for('like_story_feature', sid=story.sid) }}"
+                                    aria-label="Like this critter">
+                                <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
+                                    <path d="M20.84 4.61a5.5 5.5 0 0 0-7.78 0L12 5.67l-1.06-1.06a5.5 5.5 0 0 0-7.78 7.78l1.06 1.06L12 21.23l7.78-7.78 1.06-1.06a5.5 5.5 0 0 0 0-7.78z"></path>
+                                </svg>
+
+                                <div class="like-count-display-story" >
+                                <span class="like-count-story">{{ story.story_likes }}</span> 
+                                </div>
+                            </button>
+
+                            
+                        </div>
                         {% endif %}
+
+                        
+                    </div>   
                     {% endfor %}
                 </div>
             {% else %}
@@ -80,12 +103,33 @@
             {% if stories %}
                 <div class="story-card-grid">
                     {% for story in stories %}
+                    <div>
                         {% if story.uid != user.uid %}
                         <a href="{{ url_for('story_page', sid=story.sid, cid=critter_info.cid) }}" class="story-card pastel-box story-card-link">
                             <p>{{ story.critter_story }}</p>
                             <span class="story-author-tag">By {{ story.username }}</span>
                         </a>
+
+                        <div class="like-btn-story">
+                            <button value="like"
+                                    type="button"
+                                    class="like-btn"
+                                    data-sid="{{ story.sid }}"
+                                    data-story="{{ url_for('like_story_feature', sid=story.sid) }}"
+                                    aria-label="Like this critter">
+                                <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
+                                    <path d="M20.84 4.61a5.5 5.5 0 0 0-7.78 0L12 5.67l-1.06-1.06a5.5 5.5 0 0 0-7.78 7.78l1.06 1.06L12 21.23l7.78-7.78 1.06-1.06a5.5 5.5 0 0 0 0-7.78z"></path>
+                                </svg>
+
+                                <div class="like-count-display-story" >
+                                <span class="like-count-story">{{ story.story_likes }}</span> 
+                                </div>
+                            </button>
+
+                            
+                        </div>
                         {% endif %}
+                    </div>  
                     {% endfor %}
                 </div>
             {% else %}
