--- a/templates/base.html
+++ b/templates/base.html
@@ -23,11 +23,11 @@
 <!-- Sidebar -->
 <div id="mySidebar" class="sidebar">
     <a href="javascript:void(0)" class="closebtn" onclick="closeNavall()">&times;</a>
-    <a href="{{url_for('index')}}">Home</a>
-    <a href="{{url_for('about')}}">About</a>
 
     <!--If the user is logged in then show their profile, upload critter and logout options-->
     {% if session.get('uid') %}
+      <a href="{{url_for('index')}}">Home</a>
+      <a href="{{url_for('about')}}">About</a>
       <a href="{{url_for('user_profile', uid=session.get('uid'))}}">My Profile</a>
       <a href="{{url_for('critter_upload')}}">Upload a Critter</a>
       <a href="{{url_for('logout')}}">Logout</a>
@@ -40,6 +40,7 @@
 </div>
 
 <!-- Topbar -->
+{% if session.get('uid') %}
 <div class="topsection" id="first_main">
   <div class="topbar">
       <div>
@@ -61,6 +62,7 @@
       </form>
   </div>
 </div>
+{% endif %}
 {% endblock %}
 
 <!-- Flash Messages -->
