--- a/templates/signin.html
+++ b/templates/signin.html
@@ -1,66 +1,39 @@
 <!-- (CritterCave) -->
 <!-- Sign-in page for CritterCave -->
 
-<!doctype html>
-<html lang='en'>
-<head>
-    <meta charset='utf-8'>
-    <!-- for mobile-friendly pages -->
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name=author content="">
-    <title>"Sign-In Page for CritterCave"</title>
-    <title>"Sign-In"</title>
-    <link rel="icon" type="image/x-icon" href="{{url_for('static', filename = 'favi.png')}}">
-    <link rel='stylesheet' href="{{url_for('static', filename = 'style.css')}}">
-    <script src="{{ url_for('static', filename='script.js') }}"></script>
+{% extends "base.html" %}   
 
-</head>
-
-<body>
-
-    {% with messages = get_flashed_messages() %}
-    {% if messages %}
-        <div id="messages">
-        {% for msg in messages %}
-            <p>*** {{ msg }} ***</p>
-        {% endfor %}
-        </div>
-    {% endif %}
-    {% endwith %}
+{% block head_stuff %}
+<title>Sign In</title>
+{% endblock %}
     
-    <div id="mySidebar" class="sidebar">
-        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-        <a href="{{url_for('signup')}}">Sign Up</a>
-        <a href="{{url_for('signin')}}">Sign In</a>
+{% block main_content %}
+<div>
+    <button class="openbtn" onclick="openNav()">&#9776; </button>
+</div>
+
+<div class="main" id="main" >
+
+    <div class="log_container">
+
+        <h1>Sign In</h1>
+        <h3>Welcome back to Critter Cave!</h3>
+        <h3>Sign in below.</h3>
         
-    </div>
-
-    <div>
-        <button class="openbtn" onclick="openNav()">&#9776; </button>
-    </div>
-
-    <div class="main" id="main" >
-
-        <div class="log_container">
-
-            <h1>Sign In</h1>
-            <h3>Welcome back to Critter Cave!</h3>
-            <h3>Sign in below.</h3>
+        <form class="sign_up_form" method=POST action="{{ url_for('signin') }}">
+            <table>
+                <tr>
+                    <td><label for="username">Username</label></td>
+                    <td><input type="username" id="username" name='username' value=""></td>
+                </tr>
+                <tr>
+                    <td><label for="password">Password</label></td>
+                    <td><input type="password" id="password" name='password' value=""></td>
+                </tr>
+            </table>
             
-            <form class="sign_up_form" method=POST action="{{ url_for('signin') }}">
-                <table>
-                    <tr>
-                        <td><label for="username">Username</label></td>
-                        <td><input type="username" id="username" name='username' value=""></td>
-                    </tr>
-                    <tr>
-                        <td><label for="password">Password</label></td>
-                        <td><input type="password" id="password" name='password' value=""></td>
-                    </tr>
-                </table>
-             
-                <input type="submit" name="submit" value="Sign in" class="submit_button">
-            </form>
-            </div>
-    </div>
-</body>
+            <input type="submit" name="submit" value="Sign in" class="submit_button">
+        </form>
+        </div>
+</div>
+{% endblock %}
