--- a/templates/signup.html
+++ b/templates/signup.html
@@ -4,7 +4,7 @@
 {% extends "base.html" %}   
 
 {% block head_stuff %}
-<title>Sign In</title>
+<title>Sign Up</title>
 {% endblock %}
 
 {% block main_content %}
