--- a/static/colors.css
+++ b/static/colors.css
@@ -35,7 +35,7 @@
   --font-family: Verdana;
 }
 
-/* Dark Mode */
+/* Dark Mode test*/
 [data-theme="dark"] {
   --accent-plum: #5F274F;
   --accent-rosewood: #CF919A;
